feat(stage2): Segundo dia da trilha - Inicio
- Adicao de selo
- Adicao de imagem de perfil
- Adicao de link do GitHub

--- a/index.html
+++ b/index.html
@@ -10,12 +10,24 @@
 </head>
 
 <body>
-    <h1 id="name">
-        Pedro Paulo Lisboa de Sousa
-    </h1>
-    <a href="https://www.instagram.com/sousapedro11/" target="_blank" rel="noopener noreferrer">
-        @sousapedro11
-    </a>
+    <main>
+        <div class="content">
+            <div class="avatar">
+                <img src="images/build.svg" alt="Selo RocketSeat">
+                <img src="http://lorempixel.com.br/185/185/people" alt="Foto Pessoal de Sousapedro11">
+            </div>
+            <h1 id="name">
+                Pedro Paulo Lisboa de Sousa
+            </h1>
+            <a href="https://www.github.com/sousapedro11" target="_blank" rel="noopener noreferrer">
+                <img src="images/github_2.svg" alt="Logo GitHub">
+                sousapedro11
+            </a>
+            <a href="https://www.instagram.com/sousapedro11/" target="_blank" rel="noopener noreferrer">
+                @sousapedro11
+            </a>
+        </div>
+    </main>
 </body>
 
 </html>
