--- a/index.html
+++ b/index.html
@@ -7,25 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sousapedro11 - DoWhile 2021</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <main>
-        <div class="content">
+        <div class="container">
             <div class="avatar">
-                <img src="images/build.svg" alt="Selo RocketSeat">
-                <img src="http://lorempixel.com.br/185/185/people" alt="Foto Pessoal de Sousapedro11">
+                <span>
+                    <img src="images/build.svg" alt="Selo RocketSeat">
+                </span>
+                <!-- <img src="http://lorempixel.com.br/185/185/people" alt="Foto Pessoal de Sousapedro11"> -->
+                <img src="images/profile.jpg" alt="Foto Pessoal de Sousapedro11">
             </div>
             <h1 id="name">
-                Pedro Paulo Lisboa de Sousa
+                Pedro Sousa
             </h1>
             <a href="https://www.github.com/sousapedro11" target="_blank" rel="noopener noreferrer">
-                <img src="images/github_2.svg" alt="Logo GitHub">
+                <img src="images/github.svg" alt="Logo GitHub">
                 sousapedro11
             </a>
-            <a href="https://www.instagram.com/sousapedro11/" target="_blank" rel="noopener noreferrer">
-                @sousapedro11
-            </a>
+            <p>
+                Desenvolvedor de Software.<br>
+                Possuo experiência no backend, frontend e mobile.
+            </p>
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com/sousapedro11/" target="_blank" rel="noopener noreferrer">
+                        <img src="images/facebook.svg" alt="Logo Facebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/sousapedro11/" target="_blank" rel="noopener noreferrer">
+                        <img src="images/instagram.svg" alt="Logo Instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/ppls2106" target="_blank" rel="noopener noreferrer">
+                        <img src="images/twitter.svg" alt="Logo Twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCDOdgBaHogA_SE73Hbsm0ZA" target="_blank"
+                        rel="noopener noreferrer">
+                        <img src="images/youtube.svg" alt="Logo YouTube">
+                    </a>
+                </li>
+            </ul>
         </div>
     </main>
 </body>
