feat(stage4): adicao do JS

--- a/index.html
+++ b/index.html
@@ -29,38 +29,32 @@
                 <span>
                     <img src="images/build.svg" alt="Selo RocketSeat">
                 </span>
-                <img src="images/profile.jpg" alt="Foto Pessoal de Sousapedro11">
+                <img id="userImage" src="#" alt="Foto Pessoal de Sousapedro11">
             </div>
-            <h1 id="name">
-                Pedro Sousa
-            </h1>
-            <a href="https://www.github.com/sousapedro11" target="_blank" rel="noopener noreferrer">
+            <h1 id="userName">pp</h1>
+            <a id="userLink" href="#" target="_blank" rel="noopener noreferrer">
                 <img src="images/github.svg" alt="Logo GitHub">
-                sousapedro11
+                <span id="userLogin"></span>
             </a>
-            <p>
-                Desenvolvedor de Software.<br>
-                Possuo experiência no backend, frontend e mobile.
-            </p>
-            <ul>
-                <li>
-                    <a href="https://www.facebook.com/sousapedro11/" target="_blank" rel="noopener noreferrer">
+            <p id="userBio"></p>
+            <ul id="socialLinks">
+                <li class="facebook">
+                    <a href="#" target="_blank" rel="noopener noreferrer">
                         <img src="images/facebook.svg" alt="Logo Facebook">
                     </a>
                 </li>
-                <li>
-                    <a href="https://www.instagram.com/sousapedro11/" target="_blank" rel="noopener noreferrer">
+                <li class="instagram">
+                    <a href="#" target="_blank" rel="noopener noreferrer">
                         <img src="images/instagram.svg" alt="Logo Instagram">
                     </a>
                 </li>
-                <li>
-                    <a href="https://twitter.com/ppls2106" target="_blank" rel="noopener noreferrer">
+                <li class="twitter">
+                    <a href="#" target="_blank" rel="noopener noreferrer">
                         <img src="images/twitter.svg" alt="Logo Twitter">
                     </a>
                 </li>
-                <li>
-                    <a href="https://www.youtube.com/channel/UCDOdgBaHogA_SE73Hbsm0ZA" target="_blank"
-                        rel="noopener noreferrer">
+                <li class="youtube">
+                    <a href="#" target="_blank" rel="noopener noreferrer">
                         <img src="images/youtube.svg" alt="Logo YouTube">
                     </a>
                 </li>
