perf(index): remove textcontent

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </span>
                 <img id="userImage" src="#" alt="Foto Pessoal de Sousapedro11">
             </div>
-            <h1 id="userName">pp</h1>
+            <h1 id="userName"></h1>
             <a id="userLink" href="#" target="_blank" rel="noopener noreferrer">
                 <img src="images/github.svg" alt="Logo GitHub">
                 <span id="userLogin"></span>
