--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="avatar">
                 <span>
-                    <img src="images/build.svg" alt="Selo RocketSeat">
+                    <img id="selo" src="images/build.svg" alt="Selo RocketSeat">
                 </span>
                 <img id="userImage" src="#" alt="Foto Pessoal de Sousapedro11">
             </div>
