--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span id="userLogin"></span>
             </a>
             <p id="userBio"></p>
-            <p id="userOrg"></p>
+            <ul id="userOrgs"></ul>
             <ul id="socialLinks">
                 <li class="facebook">
                     <a href="#" target="_blank" rel="noopener noreferrer">
